--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,53 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+/* nunito-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/Nunito/nunito-v25-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/Nunito/nunito-v25-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Nunito/nunito-v25-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/Nunito/nunito-v25-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/Nunito/nunito-v25-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Nunito/nunito-v25-latin-regular.svg#Nunito') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/MaterialIcons/MaterialIcons-Regular.eot'); /* For IE6-8 */
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url('../fonts/MaterialIcons/MaterialIcons-Regular.woff2') format('woff2'),
+    url('../fonts/MaterialIcons/MaterialIcons-Regular.woff') format('woff'),
+    url('../fonts/MaterialIcons/MaterialIcons-Regular.ttf') format('truetype');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
 
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
